<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/userNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/enter_user_hint"
        android:singleLine="true"
        android:inputType="text"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:autofillHints="" />

    <EditText
        android:id="@+id/userAmountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/userNameInput"
        android:text="@string/amount_default"
        android:hint="@string/user_amount_hint"
        android:singleLine="true"
        android:inputType="numberDecimal"
        android:autofillHints="" />
</RelativeLayout>