<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    android:paddingTop="@dimen/row_padding_vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/row_padding_vertical">
    <TextView
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/user_name"
        android:layout_toStartOf="@id/event_type"
        android:layout_toLeftOf="@id/event_type"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@android:color/primary_text_light"
        android:textSize="16sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_name"
        android:layout_toLeftOf="@id/status"
        android:layout_toStartOf="@id/status"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/credit_status"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_name"
        android:textSize="14sp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/credit_amount" />


    <TextView
        android:id="@+id/event_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textSize="14sp"
        android:textColor="@color/colorGrayDark"
        android:text="@string/total_paid_value"
        />

</RelativeLayout>